# slogging

./: LICENCE  README.org  setup.cfg  setup.py
slogging/: sloggers.py
src/slogging/: __init__.py
