[metadata]
name = slogging
# version = "0."
description = Simple Logger
long_description = file: README.org
author = Aroldo de Souza Leite
author_email = asouzaleite@gmx.de
url = https://packaging-guide.openastronomy.org/en/latest/minimal.html
license = BSD 3-Clause License

[options]
zip_safe = False
#packages = find:
package_dir =
            = src
install_requires =
                 logging